// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render and match the snapshot 1`] = `
<button
  class="button"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> should render and match the snapshot 2`] = `
<button
  class="button disabled"
  disabled=""
  type="button"
>
  Button
</button>
`;
